syntax = "proto3";

option csharp_namespace = "Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.DummyItem";

package Writer;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service DummyItem {
    rpc Create (DummyItemCreateGrpcRequest) returns (DummyItemGetGrpcReply);
    rpc Delete (DummyItemDeleteGrpcRequest) returns (google.protobuf.Empty);
    rpc Get (DummyItemGetGrpcRequest) returns (DummyItemGetGrpcReply);
    rpc GetList (DummyItemGetListGrpcRequest) returns (DummyItemGetListGrpcReply);
    rpc Update (DummyItemUpdateGrpcRequest) returns (DummyItemGetGrpcReply);
}

message ActionRequestSort {
    string field = 1;
    bool is_desc = 2;
}

message ActionRequestPage {
    int32 number = 1;
    int32 size = 2;
}

message DummyItemCreateGrpcRequest {
    string name = 1;
}

message DummyItemDeleteGrpcRequest {
    int64 id = 1;
}

message DummyItemGetGrpcRequest {
    int64 id = 1;
}

message DummyItemGetGrpcReply {
    int64 id = 1;
    string name = 2;
    string concurrency_token = 3;
}

message DummyItemGetListGrpcRequestFilter {
    google.protobuf.StringValue full_text_search_query = 1;
}

message DummyItemGetListGrpcRequest {
    ActionRequestPage page = 1;
    ActionRequestSort sort = 2;
    DummyItemGetListGrpcRequestFilter filter = 3;
}

message DummyItemGetListGrpcReplyItem {
    int64 id = 1;
    string name = 2;
    string concurrency_token = 3;    
}

message DummyItemGetListGrpcReply {
    int64 total_count = 1;
    repeated DummyItemGetListGrpcReplyItem items = 2;
}

message DummyItemUpdateGrpcRequest {    
    string name = 1;
    int64 id = 2;
}