global using Ardalis.Result;
global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEvent;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEvent.Command.Sections;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEvent.Commands;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEvent.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEvent.Queries;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEventPayload;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEventPayload.Command.Sections;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEventPayload.Commands;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEventPayload.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.AppOutgoingEventPayload.Queries;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.Auth.Commands;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.Auth.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.DummyItem;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.DummyItem.Command.Sections;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.DummyItem.Commands;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.DummyItem.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCases.DummyItem.Queries;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCasesForClient.AppOutgoingEvent.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCasesForClient.AppOutgoingEventPayload.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCasesForClient.Auth.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Domain.UseCasesForClient.DummyItem.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.AppOutgoingEvent;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.AppOutgoingEventPayload;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.Auth;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.DummyItem;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.GrpcClient.AppOutgoingEvent.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.GrpcClient.AppOutgoingEventPayload.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.GrpcClient.Auth.Services;
global using Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.GrpcClient.DummyItem.Services;
global using Makc.Dummy.Shared.Core.App;
global using Makc.Dummy.Shared.Core.App.Config.Options.Enums;
global using Makc.Dummy.Shared.Core.App.Config.Options.Sections.Domain;
global using Makc.Dummy.Shared.Core.Http;
global using Makc.Dummy.Shared.Infrastructure.Grpc;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppOutgoingEventGrpcClient = Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.AppOutgoingEvent.AppOutgoingEvent.AppOutgoingEventClient;
global using AppOutgoingEventPayloadGrpcClient = Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.AppOutgoingEventPayload.AppOutgoingEventPayload.AppOutgoingEventPayloadClient;
global using AuthGrpcClient = Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.Auth.Auth.AuthClient;
global using DummyItemGrpcClient = Makc.Dummy.Integration.MicroserviceWriter.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemClient;
